fix layout on mobile

--- a/components/Home.module.css
+++ b/components/Home.module.css
@@ -1,5 +1,5 @@
 .home {
-  width: 100vh;
+  width: 100vw;
   height: 100vh;
   display: flex;
   align-items: center;
@@ -8,7 +8,7 @@
 
 .wrapper {
   height: 100%;
-  padding: 20px;
+
   display: flex;
   flex-direction: column;
   align-items: center;
