--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,7 +10,7 @@
 }
 
 body {
-  background: #040c18;
+  background: rgba(4, 12, 24, 1) 100%;
 }
 
 #__next {
